tests/good/misc/empty-string.pas
program EmptyString;

begin
    WriteLn('')
end.
