tests/bad/declare-main-external.pas
program declare_main_external;

function main(); external;

begin
end.
